# myBDD

./: CMakeLists.txt  myBDDConfig.cmake.in
include/myBDD/: type.hpp
src/: type.cpp
